# Serpiente

./: .gitignore  GEMINI.md  LICENSE  README.md  drift_test.esp  generateExtension.bat  generateExtension.sh  hola.esp  other.esp  pyproject.toml  requirements.txt
examples/: fail.rwp  isolated_es.esp  isolated_fr.frp  isolated_rw.rwp  main.rwp  math_lib.esp  utils.frp
scripts/: generate_vscode_ext.py
serpiente/: __main__.py  importer.py  langs_manager.py  lsp.py  translator.py
serpiente/langs/: __template__.py  es.py  fr.py  rw.py
vscode-serpiente/: .vscodeignore  extension.js  language-configuration.json  mappings.json  package-lock.json  package.json  serpiente-0.1.0.vsix  tsconfig.json  webpack.config.js
vscode-serpiente/language-configurations/: python-esp.json  python-frp.json  python-rwp.json
vscode-serpiente/snippets/: python-esp.json  python-frp.json  python-rwp.json
vscode-serpiente/src/: diagnostics.ts  extension.ts  positionMapper.ts  providers.ts  shadowWorkspace.ts  translator.ts  uriUtils.ts
vscode-serpiente/syntaxes/: python-esp.tmLanguage.json  python-frp.tmLanguage.json  python-rwp.tmLanguage.json
